# placar-eletronico

./: PRD do Placar Eletrônico.md  README.md  ROADMAP.md  SETUP_GUIDE.md  main.py  pyproject.toml  resultados_cbsa.csv
src/: main.py
src/components/: athlete_panel.py  timer_display.py
src/services/: csv_service.py  pdf_service.py
tests/: test_components.py  test_services.py
